--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,19 @@
-beautifulsoup4>=4.6.0
-certifi>=2018.4.16
-chardet>=3.0.4
-future>=0.16.0
-idna>=2.7
-oauthlib>=2.1.0
-python-twitter>=3.4.2
-requests>=2.19.1
-requests-oauthlib>=1.0.0
-urllib3>=1.23
+appdirs==1.4.3
+attrs==18.2.0
+beautifulsoup4==4.7.1
+black==18.9b0
+certifi==2018.11.29
+chardet==3.0.4
+Click==7.0
+fake-useragent==0.1.11
+future==0.17.1
+idna==2.8
+isort==4.3.4
+oauthlib==3.0.1
+pkg-resources==0.0.0
+python-twitter==3.5
+requests==2.21.0
+requests-oauthlib==1.2.0
+soupsieve==1.8
+toml==0.10.0
+urllib3==1.24.1
